# giton-cli

./: .gitignore  .giton  Cargo.toml  LICENSE  README.md  SECURITY.md  release.toml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: audit.yml  build.yml  lint.yml  release.yml  test.yml  toc.yml
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml  README.md
core/prompts/: helpme.txt  undo.txt
core/src/: commands.rs  db.rs  decode.rs  git.rs  lib.rs
docker/: Dockerfile
src/: main.rs
src/resources/: default_config.toml
tests/: test_cli.rs
utils/: Cargo.toml
utils/src/: app_config.rs  error.rs  logger.rs  types.rs
