[package]
name = "giton"
version = "0.0.1-beta.1"
authors = ["Abid Omar <contact@omarabid.com>"]
edition = "2021"
repository = "https://github.com/Giton-App/giton-cli"
readme = "README.md"
license = "MIT"
keywords = ["git", "ai"]
description = """
Giton is AI-powered utility for Git
"""

[workspace]
members = ["utils", "cli", "core"]


[dependencies]
utils = { path = "utils", version = "0.0.1-beta.1", package = "giton-utils" }
cli = { path = "cli", version = "0.0.1-beta.1", package = "giton-cli" }
core = { path = "core", version = "0.0.1-beta.1", package = "giton-core" }
human-panic = "1.2.2"
better-panic = "0.3.0"
log = "0.4.20"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
