[package]
name = "giton-cli"
version = "0.1.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface for giton"
edition = "2021"
repository = "https://github.com/Giton-App/giton-cli"
readme = "README.md"
license = "MIT"
keywords = ["giton-workspace"]

[dependencies]
utils = { path = "../utils", version = "0.1.0", package = "giton-utils" }
core = { path = "../core", version = "0.1.0", package = "giton-core" }
clap_complete = "4.4.4"

[dependencies.clap]
version = "4.4.7"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
