[package]
name = "core"
version = "1.0.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "Main Package"
edition = "2021"

[dependencies]
utils = { path = "../utils" }


async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
log = "0.4.20"
chrono = "0.4.31"
async-openai = "0.17.0"
reqwest = "0.11.22"
